fixed dropdown menu text color in dark mode

--- a/travel-x/src/index.css
+++ b/travel-x/src/index.css
@@ -141,5 +141,9 @@ label {
   color: #fff;
 }
 
+a {
+  color: inherit;
+}
+
 /* TODO: */
 /* make dark mode button aligned to the right instead fo fixed position */
